# mp3_player

./: .gitignore  README.md  build.sh  monitor.sh
main/: CMakeLists.txt  audio_player.c  audio_player.h  bt_a2dp.c  bt_a2dp.h  bt_avrcp.c  bt_avrcp.h  bt_gap.c  bt_gap.h  button_control.c  button_control.h  common.h  gpio_config.h  i2c.c  main.c  oled_display.c  oled_display.h  sd_card.c  sd_card.h  spi.c  ssd1306_drv.c  ssd1306_drv.h
